--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-478.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 捷克-1.80MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 台湾-5.16MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.06MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.80MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.23MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇭 瑞士-416.4KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
+  - {name: 🇨🇳 中国-188.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-446.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇯🇵 日本-4.41MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-762.6KB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-3.46MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-309.5KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-12.68MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-5.70MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
-      - 捷克-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-416.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
-      - 捷克-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-416.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
-      - 捷克-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-416.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
-      - 捷克-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-416.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
-      - 捷克-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-416.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
-      - 捷克-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-416.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
-      - 捷克-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-416.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.68MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
