--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
-  - {name: 🇨🇳 中国-188.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-446.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇯🇵 日本-4.41MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.55MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-159.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.23MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-762.6KB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
   - {name: 🇨🇳 中国-3.46MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-309.5KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-159.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-159.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-159.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-159.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-159.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-159.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-446.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-159.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-762.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-309.5KB/s(Youtube:不良林)
