--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.40MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-10.50MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 捷克-301.0KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-6.38MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇩🇪 德国-3.05MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.19MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇻🇳 越南-3.35MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.97MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.82MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.45MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.33MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-479.5KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
+  - {name: 🇨🇳 台湾-8.92MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 捷克-301.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 捷克-301.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 捷克-301.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 捷克-301.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 捷克-301.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 捷克-301.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.50MB/s(Youtube:不良林)
+      - 捷克-301.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.99MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
