--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-169.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-237.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-508.9KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.33MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-479.5KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
-  - {name: 🇨🇳 台湾-8.92MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-7.38MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-350.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.27MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.09MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
+  - {name: 🇨🇳 中国-364.7KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-508.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-508.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-508.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-508.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-508.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-508.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-169.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-237.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-508.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-479.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
